# motion-analytics-toolkit

./: LICENSE  README.md  pyproject.toml
archetypes/: __init__.py  base.py  persona.py  templates.py
artifacts/movement_vocabulary/: motion_seed_experiment_v2.json  motion_seed_experiment_v2.singlemodel.20260221_160301.json  movement_vocabulary_analysis.json  run_movement_vocabulary_analysis.py
biomechanics/: __init__.py  energetics.py
core/: exceptions.py  signal.py
hero-concepts/: 01_geological_cross_section.html  02_schema_rosette.html  03_gait_space_nebula.html  04_stoyko_periodic_table.html  05_walker_waterfall.html  06_archetype_atlas.html  07_weight_hypergraph.html  08_persona_weight_hypergraph.html
io/: _init_.py  loaders.py
kinematics/: path.py
motion_analytics/: __init__.py
motion_analytics/archetypes/: __init__.py  base.py  persona.py  structural_transfer.py  templates.py  violations.py
motion_analytics/biomechanics/: __init__.py  energetics.py  (+1 more)
patterns/: ludobots_archetypes.v1.json  ludobots_archetypes_d3_summary.json  motion_analytics_pattern_language.v1.json  motion_analytics_pattern_sequence.v1.json
scenarios/: base.py  io.py  robustness.py  vulnerability.py
semantic_ca/: __init__.py  builtin.py  dynamics.py  lattice.py  rules.py
tests/: conftest.py  test_archetypes.py  test_biomechanics.py  test_core.py  test_coverage.py  test_image_schemas.py  test_kinematics.py  test_pattern_language.py  test_scenarios.py  test_semantic_ca.py  test_systemviz.py  test_violations.py  test_weight_suites.py  test_wolfram.py
utils/: kinematics.py
(+26 files in other folders)
